<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.martin.projectskola.activity.PridatFotkuActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imgPhotoFromCamera"
            android:layout_width="match_parent"
            android:layout_height="176dp"
            app:srcCompat="@drawable/common_full_open_on_phone"
            android:layout_weight="0.28" />

        <Button
            android:id="@+id/btnMakePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_foto" />

        <EditText
            android:id="@+id/editTitlePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/photoTitle" />

        <EditText
            android:id="@+id/editDescriptionPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.07"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/photoDescription" />

        <Button
            android:id="@+id/btnAddPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.09"
            android:text="@string/btnAddPhoto" />

    </LinearLayout>

</RelativeLayout>


