<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/statistikaTOPLokality"
        android:fontFamily="serif"
        android:textSize="30dp"
        android:textStyle="bold"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <TextView
            android:id="@+id/textViewPrvniLokalita"
            android:layout_width="331dp"
            android:layout_height="55dp"
            android:text="@string/statistikaPrazdnePole"
            android:gravity="center"/>
        <TextView
            android:id="@+id/textViewPrvniLokalitaCislo"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp">
        <TextView
            android:id="@+id/textViewDruhaLokalita"
            android:layout_width="331dp"
            android:layout_height="55dp"
            android:text="@string/statistikaPrazdnePole"
            android:gravity="center"/>
        <TextView
            android:id="@+id/textViewDruhaLokalitaCislo"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp">
        <TextView
            android:id="@+id/textViewTretiLokalita"
            android:layout_width="331dp"
            android:layout_height="55dp"
            android:text="@string/statistikaPrazdnePole"
            android:gravity="center"/>
        <TextView
        android:id="@+id/textViewTretiLokalitaCislo"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp">
        <TextView
            android:id="@+id/textViewCtvrtaLokalita"
            android:layout_width="331dp"
            android:layout_height="55dp"
            android:text="@string/statistikaPrazdnePole"
            android:gravity="center"/>
        <TextView
            android:id="@+id/textViewCtvrtaLokalitaCislo"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp">
        <TextView
            android:id="@+id/textViewPataLokalita"
            android:layout_width="331dp"
            android:layout_height="55dp"
            android:text="@string/statistikaPrazdnePole"
            android:gravity="center"/>
        <TextView
        android:id="@+id/textViewPataLokalitaCislo"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="331dp"
            android:textStyle="bold"
            android:layout_height="55dp"
            android:text="@string/statistikaPocetFotek"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textViewCelkovyPocetFotek"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>